fix(home-page): remove grid gap causing double spacing between sections

--- a/src/app/features/home/pages/home-page/home-page.component.scss
+++ b/src/app/features/home/pages/home-page/home-page.component.scss
@@ -1,7 +1,6 @@
 :host {
-  display: grid;
+  display: block;
   width: 100%;
   max-width: 100%;
   min-width: 0;
-  gap: 2rem;
 }
